--- a/test/fixtures/publishers.yml
+++ b/test/fixtures/publishers.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  rss_url: MyString
+  name: Al Jazeera
+  rss_url: https://www.aljazeera.com/xml/rss/all.xml
 
 two:
-  name: MyString
-  rss_url: MyString
+  name: CBS News
+  rss_url: https://www.cbsnews.com/latest/rss/world
